// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Responses API handlers: fallback HTTP errors > 400 with a detail field 1`] = `
{
  "codex": {
    "chunks": [],
    "encryptedContent": undefined,
    "error": "Invalid request to Codex API. Please check your input parameters. - Stream must be set to true",
    "responseId": undefined,
    "status": 400,
  },
  "native": {
    "chunks": [],
    "encryptedContent": undefined,
    "error": "Invalid request to Responses API. Please check your input parameters. - Stream must be set to true",
    "responseId": undefined,
    "status": 400,
  },
}
`;

exports[`Responses API handlers: fallback HTTP errors > 401 with an error message 1`] = `
{
  "codex": {
    "chunks": [],
    "encryptedContent": undefined,
    "error": "Not authenticated with OpenAI Codex. Please sign in using the OpenAI Codex OAuth flow.",
    "responseId": undefined,
    "status": 401,
  },
  "native": {
    "chunks": [],
    "encryptedContent": undefined,
    "error": "Failed to connect to Responses API: Authentication failed. Please check your OpenAI API key. - bad key",
    "responseId": undefined,
    "status": 401,
  },
}
`;

exports[`Responses API handlers: fallback HTTP errors > 403 with a message field 1`] = `
{
  "codex": {
    "chunks": [],
    "encryptedContent": undefined,
    "error": "Failed to connect to Codex API: Access denied. Your ChatGPT subscription may not include Codex access. - no access",
    "responseId": undefined,
    "status": 403,
  },
  "native": {
    "chunks": [],
    "encryptedContent": undefined,
    "error": "Failed to connect to Responses API: Access denied. Your API key may not have access to this endpoint. - no access",
    "responseId": undefined,
    "status": 403,
  },
}
`;

exports[`Responses API handlers: fallback HTTP errors > 404 with plain text 1`] = `
{
  "codex": {
    "chunks": [],
    "encryptedContent": undefined,
    "error": "Codex API endpoint not found. - not found",
    "responseId": undefined,
    "status": 404,
  },
  "native": {
    "chunks": [],
    "encryptedContent": undefined,
    "error": "Responses API endpoint not found. The endpoint may not be available yet or requires a different configuration. - not found",
    "responseId": undefined,
    "status": 404,
  },
}
`;

exports[`Responses API handlers: fallback HTTP errors > 418 (no dedicated text) 1`] = `
{
  "codex": {
    "chunks": [],
    "encryptedContent": undefined,
    "error": "Codex API error (418) - teapot",
    "responseId": undefined,
    "status": 418,
  },
  "native": {
    "chunks": [],
    "encryptedContent": undefined,
    "error": "Responses API error (418) - teapot",
    "responseId": undefined,
    "status": 418,
  },
}
`;

exports[`Responses API handlers: fallback HTTP errors > 429 with an empty body 1`] = `
{
  "codex": {
    "chunks": [],
    "encryptedContent": undefined,
    "error": "Failed to connect to Codex API: Rate limit exceeded. Please try again later.",
    "responseId": undefined,
    "status": 429,
  },
  "native": {
    "chunks": [],
    "encryptedContent": undefined,
    "error": "Failed to connect to Responses API: Rate limit exceeded. Please try again later.",
    "responseId": undefined,
    "status": 429,
  },
}
`;

exports[`Responses API handlers: fallback HTTP errors > 502 with JSON without a message 1`] = `
{
  "codex": {
    "chunks": [],
    "encryptedContent": undefined,
    "error": "Failed to connect to Codex API: OpenAI Codex service error. Please try again later. - {"code":1}",
    "responseId": undefined,
    "status": 502,
  },
  "native": {
    "chunks": [],
    "encryptedContent": undefined,
    "error": "Failed to connect to Responses API: OpenAI service error. Please try again later. - {"code":1}",
    "responseId": undefined,
    "status": 502,
  },
}
`;

exports[`Responses API handlers: fallback HTTP errors > a 200 without a body 1`] = `
{
  "codex": {
    "chunks": [],
    "encryptedContent": undefined,
    "error": "Codex API error: No response body",
    "responseId": undefined,
  },
  "native": {
    "chunks": [],
    "encryptedContent": undefined,
    "error": "Responses API error: No response body",
    "responseId": undefined,
  },
}
`;

exports[`Responses API handlers: fallback HTTP errors > a network failure 1`] = `
{
  "codex": {
    "chunks": [],
    "encryptedContent": undefined,
    "error": "Failed to connect to Codex API: fetch failed",
    "responseId": undefined,
  },
  "native": {
    "chunks": [],
    "encryptedContent": undefined,
    "error": "Failed to connect to Responses API: fetch failed",
    "responseId": undefined,
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > #10719 argument deltas without any identity 1`] = `
{
  "codex": {
    "chunks": [
      {
        "arguments": "{"path":",
        "id": "call_123",
        "index": 0,
        "name": "read_file",
        "type": "tool_call_partial",
      },
      {
        "arguments": ""/tmp/test.txt"}",
        "id": "call_123",
        "index": 0,
        "name": "read_file",
        "type": "tool_call_partial",
      },
    ],
    "encryptedContent": undefined,
    "responseId": undefined,
  },
  "codexSse": {
    "chunks": [
      {
        "arguments": "{"path":",
        "id": "call_123",
        "index": 0,
        "name": "read_file",
        "type": "tool_call_partial",
      },
      {
        "arguments": ""/tmp/test.txt"}",
        "id": "call_123",
        "index": 0,
        "name": "read_file",
        "type": "tool_call_partial",
      },
    ],
    "encryptedContent": undefined,
    "responseId": undefined,
  },
  "native": {
    "chunks": [
      {
        "arguments": "{"path":",
        "id": "call_123",
        "index": 0,
        "name": "read_file",
        "type": "tool_call_partial",
      },
      {
        "arguments": ""/tmp/test.txt"}",
        "id": "call_123",
        "index": 0,
        "name": "read_file",
        "type": "tool_call_partial",
      },
    ],
    "encryptedContent": undefined,
    "responseId": undefined,
  },
  "nativeSse": {
    "chunks": [
      {
        "arguments": "{"path":",
        "id": "call_123",
        "index": 0,
        "name": "read_file",
        "type": "tool_call_partial",
      },
      {
        "arguments": ""/tmp/test.txt"}",
        "id": "call_123",
        "index": 0,
        "name": "read_file",
        "type": "tool_call_partial",
      },
    ],
    "encryptedContent": undefined,
    "responseId": undefined,
  },
  "xai": {
    "chunks": [
      {
        "arguments": "{"path":"/tmp/test.txt"}",
        "id": "call_123",
        "name": "read_file",
        "type": "tool_call",
      },
    ],
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > #11621 assistant message only in response.output_item.done 1`] = `
{
  "codex": {
    "chunks": [
      {
        "text": "hello from done item",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_done_item_only",
  },
  "codexSse": {
    "chunks": [
      {
        "text": "hello from done item",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_done_item_only",
  },
  "native": {
    "chunks": [
      {
        "text": "hello from done item",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_done_item_only",
  },
  "nativeSse": {
    "chunks": [
      {
        "text": "hello from done item",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_done_item_only",
  },
  "xai": {
    "chunks": [
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "type": "usage",
      },
    ],
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > #11621 deltas and content_part.added together 1`] = `
{
  "codex": {
    "chunks": [
      {
        "text": "hello world",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_delta_content_part",
  },
  "codexSse": {
    "chunks": [
      {
        "text": "hello world",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_delta_content_part",
  },
  "native": {
    "chunks": [
      {
        "text": "hello world",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_delta_content_part",
  },
  "nativeSse": {
    "chunks": [
      {
        "text": "hello world",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_delta_content_part",
  },
  "xai": {
    "chunks": [
      {
        "text": "hello world",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "type": "usage",
      },
    ],
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > #11621 deltas and output_text.done together 1`] = `
{
  "codex": {
    "chunks": [
      {
        "text": "hello ",
        "type": "text",
      },
      {
        "text": "world",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_delta_done",
  },
  "codexSse": {
    "chunks": [
      {
        "text": "hello ",
        "type": "text",
      },
      {
        "text": "world",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_delta_done",
  },
  "native": {
    "chunks": [
      {
        "text": "hello ",
        "type": "text",
      },
      {
        "text": "world",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_delta_done",
  },
  "nativeSse": {
    "chunks": [
      {
        "text": "hello ",
        "type": "text",
      },
      {
        "text": "world",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_delta_done",
  },
  "xai": {
    "chunks": [
      {
        "text": "hello ",
        "type": "text",
      },
      {
        "text": "world",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "type": "usage",
      },
    ],
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > #11621 function call only in response.output_item.done (object arguments) 1`] = `
{
  "codex": {
    "chunks": [
      {
        "arguments": "{"result":"ok"}",
        "id": "call_done_only",
        "name": "attempt_completion",
        "type": "tool_call",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_done_tool_only",
  },
  "codexSse": {
    "chunks": [
      {
        "arguments": "{"result":"ok"}",
        "id": "call_done_only",
        "name": "attempt_completion",
        "type": "tool_call",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_done_tool_only",
  },
  "native": {
    "chunks": [
      {
        "arguments": "{"result":"ok"}",
        "id": "call_done_only",
        "name": "attempt_completion",
        "type": "tool_call",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_done_tool_only",
  },
  "nativeSse": {
    "chunks": [
      {
        "arguments": "{"result":"ok"}",
        "id": "call_done_only",
        "name": "attempt_completion",
        "type": "tool_call",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_done_tool_only",
  },
  "xai": {
    "chunks": [
      {
        "arguments": "{"result":"ok"}",
        "id": "call_done_only",
        "name": "attempt_completion",
        "type": "tool_call",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "type": "usage",
      },
    ],
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > #11621 text only in response.content_part.added 1`] = `
{
  "codex": {
    "chunks": [
      {
        "text": "content part text",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_content_part",
  },
  "codexSse": {
    "chunks": [
      {
        "text": "content part text",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_content_part",
  },
  "native": {
    "chunks": [
      {
        "text": "content part text",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_content_part",
  },
  "nativeSse": {
    "chunks": [
      {
        "text": "content part text",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_content_part",
  },
  "xai": {
    "chunks": [
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "type": "usage",
      },
    ],
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > #11621 text only in response.output_text.done 1`] = `
{
  "codex": {
    "chunks": [
      {
        "text": "done-event text only",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_done_text_only",
  },
  "codexSse": {
    "chunks": [
      {
        "text": "done-event text only",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_done_text_only",
  },
  "native": {
    "chunks": [
      {
        "text": "done-event text only",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_done_text_only",
  },
  "nativeSse": {
    "chunks": [
      {
        "text": "done-event text only",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_done_text_only",
  },
  "xai": {
    "chunks": [
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "type": "usage",
      },
    ],
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > #11621 text only in the response.completed output 1`] = `
{
  "codex": {
    "chunks": [
      {
        "text": "final payload only",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_completed_only",
  },
  "codexSse": {
    "chunks": [
      {
        "text": "final payload only",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_completed_only",
  },
  "native": {
    "chunks": [
      {
        "text": "final payload only",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_completed_only",
  },
  "nativeSse": {
    "chunks": [
      {
        "text": "final payload only",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_completed_only",
  },
  "xai": {
    "chunks": [
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "type": "usage",
      },
    ],
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > Chat Completions chunk followed by a done message 1`] = `
{
  "codex": {
    "chunks": [
      {
        "text": "chat chunk",
        "type": "text",
      },
    ],
    "encryptedContent": undefined,
    "responseId": undefined,
  },
  "codexSse": {
    "chunks": [
      {
        "text": "chat chunk",
        "type": "text",
      },
    ],
    "encryptedContent": undefined,
    "responseId": undefined,
  },
  "native": {
    "chunks": [
      {
        "text": "chat chunk",
        "type": "text",
      },
    ],
    "encryptedContent": undefined,
    "responseId": undefined,
  },
  "nativeSse": {
    "chunks": [
      {
        "text": "chat chunk",
        "type": "text",
      },
    ],
    "encryptedContent": undefined,
    "responseId": undefined,
  },
  "xai": {
    "chunks": [],
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > GPT-5.6 cache writes in input_tokens_details 1`] = `
{
  "codex": {
    "chunks": [
      {
        "text": "cached",
        "type": "text",
      },
      {
        "cacheReadTokens": 2000,
        "cacheWriteTokens": 3000,
        "inputTokens": 10000,
        "outputTokens": 500,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_cache_write",
  },
  "codexSse": {
    "chunks": [
      {
        "text": "cached",
        "type": "text",
      },
      {
        "cacheReadTokens": 2000,
        "cacheWriteTokens": 3000,
        "inputTokens": 10000,
        "outputTokens": 500,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_cache_write",
  },
  "native": {
    "chunks": [
      {
        "text": "cached",
        "type": "text",
      },
      {
        "cacheReadTokens": 2000,
        "cacheWriteTokens": 3000,
        "inputTokens": 10000,
        "outputTokens": 500,
        "totalCost": 0.028,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_cache_write",
  },
  "nativeSse": {
    "chunks": [
      {
        "text": "cached",
        "type": "text",
      },
      {
        "cacheReadTokens": 2000,
        "cacheWriteTokens": 3000,
        "inputTokens": 10000,
        "outputTokens": 500,
        "totalCost": 0.028,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_cache_write",
  },
  "xai": {
    "chunks": [
      {
        "text": "cached",
        "type": "text",
      },
      {
        "cacheReadTokens": 2000,
        "cacheWriteTokens": 0,
        "inputTokens": 10000,
        "outputTokens": 500,
        "type": "usage",
      },
    ],
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > argument deltas that carry their own identity 1`] = `
{
  "codex": {
    "chunks": [
      {
        "arguments": "{"path":"."}",
        "id": "call_own",
        "index": 2,
        "name": "list_files",
        "type": "tool_call_partial",
      },
      {
        "arguments": "",
        "id": "call_own",
        "index": 2,
        "name": "list_files",
        "type": "tool_call_partial",
      },
    ],
    "encryptedContent": undefined,
    "responseId": undefined,
  },
  "codexSse": {
    "chunks": [
      {
        "arguments": "{"path":"."}",
        "id": "call_own",
        "index": 2,
        "name": "list_files",
        "type": "tool_call_partial",
      },
      {
        "arguments": "",
        "id": "call_own",
        "index": 2,
        "name": "list_files",
        "type": "tool_call_partial",
      },
    ],
    "encryptedContent": undefined,
    "responseId": undefined,
  },
  "native": {
    "chunks": [
      {
        "arguments": "{"path":"."}",
        "id": "call_own",
        "index": 2,
        "name": "list_files",
        "type": "tool_call_partial",
      },
      {
        "arguments": "",
        "id": "call_own",
        "index": 2,
        "name": "list_files",
        "type": "tool_call_partial",
      },
    ],
    "encryptedContent": undefined,
    "responseId": undefined,
  },
  "nativeSse": {
    "chunks": [
      {
        "arguments": "{"path":"."}",
        "id": "call_own",
        "index": 2,
        "name": "list_files",
        "type": "tool_call_partial",
      },
      {
        "arguments": "",
        "id": "call_own",
        "index": 2,
        "name": "list_files",
        "type": "tool_call_partial",
      },
    ],
    "encryptedContent": undefined,
    "responseId": undefined,
  },
  "xai": {
    "chunks": [
      {
        "arguments": "{"path":"."}",
        "id": "call_own",
        "index": 2,
        "name": "list_files",
        "type": "tool_call_partial",
      },
      {
        "arguments": "",
        "id": "call_own",
        "index": 2,
        "name": "list_files",
        "type": "tool_call_partial",
      },
    ],
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > audio transcript and tool status events 1`] = `
{
  "codex": {
    "chunks": [
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_audio",
  },
  "codexSse": {
    "chunks": [
      {
        "text": "spoken words",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_audio",
  },
  "native": {
    "chunks": [
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_audio",
  },
  "nativeSse": {
    "chunks": [
      {
        "text": "spoken words",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_audio",
  },
  "xai": {
    "chunks": [
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "type": "usage",
      },
    ],
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > error event 1`] = `
{
  "codex": {
    "chunks": [
      {
        "text": "partial",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_error",
  },
  "codexSse": {
    "chunks": [
      {
        "text": "partial",
        "type": "text",
      },
    ],
    "encryptedContent": undefined,
    "error": "Error processing response stream: Codex API error: The server had an error",
    "responseId": undefined,
  },
  "native": {
    "chunks": [
      {
        "text": "partial",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_error",
  },
  "nativeSse": {
    "chunks": [
      {
        "text": "partial",
        "type": "text",
      },
    ],
    "encryptedContent": undefined,
    "error": "Error processing response stream: Responses API error: The server had an error",
    "responseId": undefined,
  },
  "xai": {
    "chunks": [
      {
        "text": "partial",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "type": "usage",
      },
    ],
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > full response in a non-streaming event 1`] = `
{
  "codex": {
    "chunks": [],
    "encryptedContent": undefined,
    "responseId": "resp_snapshot",
  },
  "codexSse": {
    "chunks": [
      {
        "text": "snapshot text",
        "type": "text",
      },
      {
        "text": "snapshot reasoning",
        "type": "reasoning",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 8,
        "outputTokens": 9,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_snapshot",
  },
  "native": {
    "chunks": [],
    "encryptedContent": undefined,
    "responseId": "resp_snapshot",
  },
  "nativeSse": {
    "chunks": [
      {
        "text": "snapshot text",
        "type": "text",
      },
      {
        "text": "snapshot reasoning",
        "type": "reasoning",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 8,
        "outputTokens": 9,
        "totalCost": 0.000155,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_snapshot",
  },
  "xai": {
    "chunks": [],
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > reasoning, text and usage of a real GPT-5 answer 1`] = `
{
  "codex": {
    "chunks": [
      {
        "text": "Thinking about ",
        "type": "reasoning",
      },
      {
        "text": "the answer",
        "type": "reasoning",
      },
      {
        "text": "Hello ",
        "type": "text",
      },
      {
        "text": "there",
        "type": "text",
      },
      {
        "cacheReadTokens": 400,
        "cacheWriteTokens": 0,
        "inputTokens": 1000,
        "outputTokens": 200,
        "reasoningTokens": 120,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": {
      "encrypted_content": "enc_abc",
      "id": "rs_1",
    },
    "responseId": "resp_full",
  },
  "codexSse": {
    "chunks": [
      {
        "text": "Thinking about ",
        "type": "reasoning",
      },
      {
        "text": "the answer",
        "type": "reasoning",
      },
      {
        "text": "Hello ",
        "type": "text",
      },
      {
        "text": "there",
        "type": "text",
      },
      {
        "cacheReadTokens": 400,
        "cacheWriteTokens": 0,
        "inputTokens": 1000,
        "outputTokens": 200,
        "reasoningTokens": 120,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": {
      "encrypted_content": "enc_abc",
      "id": "rs_1",
    },
    "responseId": "resp_full",
  },
  "native": {
    "chunks": [
      {
        "text": "Thinking about ",
        "type": "reasoning",
      },
      {
        "text": "the answer",
        "type": "reasoning",
      },
      {
        "text": "Hello ",
        "type": "text",
      },
      {
        "text": "there",
        "type": "text",
      },
      {
        "cacheReadTokens": 400,
        "cacheWriteTokens": 0,
        "inputTokens": 1000,
        "outputTokens": 200,
        "reasoningTokens": 120,
        "totalCost": 0.0023,
        "type": "usage",
      },
    ],
    "encryptedContent": {
      "encrypted_content": "enc_abc",
      "id": "rs_1",
    },
    "responseId": "resp_full",
  },
  "nativeSse": {
    "chunks": [
      {
        "text": "Thinking about ",
        "type": "reasoning",
      },
      {
        "text": "the answer",
        "type": "reasoning",
      },
      {
        "text": "Hello ",
        "type": "text",
      },
      {
        "text": "there",
        "type": "text",
      },
      {
        "cacheReadTokens": 400,
        "cacheWriteTokens": 0,
        "inputTokens": 1000,
        "outputTokens": 200,
        "reasoningTokens": 120,
        "totalCost": 0.0023,
        "type": "usage",
      },
    ],
    "encryptedContent": {
      "encrypted_content": "enc_abc",
      "id": "rs_1",
    },
    "responseId": "resp_full",
  },
  "xai": {
    "chunks": [
      {
        "text": "Thinking about ",
        "type": "reasoning",
      },
      {
        "text": "the answer",
        "type": "reasoning",
      },
      {
        "text": "Hello ",
        "type": "text",
      },
      {
        "text": "there",
        "type": "text",
      },
      {
        "cacheReadTokens": 400,
        "cacheWriteTokens": 0,
        "inputTokens": 1000,
        "outputTokens": 200,
        "reasoningTokens": 120,
        "type": "usage",
      },
    ],
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > reasoning_text deltas and legacy delta names 1`] = `
{
  "codex": {
    "chunks": [
      {
        "text": "raw reasoning",
        "type": "reasoning",
      },
      {
        "text": " more",
        "type": "reasoning",
      },
      {
        "text": " summary",
        "type": "reasoning",
      },
      {
        "text": "legacy text",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 5,
        "outputTokens": 6,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_legacy",
  },
  "codexSse": {
    "chunks": [
      {
        "text": "raw reasoning",
        "type": "reasoning",
      },
      {
        "text": " more",
        "type": "reasoning",
      },
      {
        "text": " summary",
        "type": "reasoning",
      },
      {
        "text": "legacy text",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 5,
        "outputTokens": 6,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_legacy",
  },
  "native": {
    "chunks": [
      {
        "text": "raw reasoning",
        "type": "reasoning",
      },
      {
        "text": " more",
        "type": "reasoning",
      },
      {
        "text": " summary",
        "type": "reasoning",
      },
      {
        "text": "legacy text",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 5,
        "outputTokens": 6,
        "totalCost": 0.00010250000000000001,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_legacy",
  },
  "nativeSse": {
    "chunks": [
      {
        "text": "raw reasoning",
        "type": "reasoning",
      },
      {
        "text": " more",
        "type": "reasoning",
      },
      {
        "text": " summary",
        "type": "reasoning",
      },
      {
        "text": "legacy text",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 5,
        "outputTokens": 6,
        "totalCost": 0.00010250000000000001,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_legacy",
  },
  "xai": {
    "chunks": [
      {
        "text": "raw reasoning",
        "type": "reasoning",
      },
      {
        "text": " more",
        "type": "reasoning",
      },
      {
        "text": " summary",
        "type": "reasoning",
      },
      {
        "text": "legacy text",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 5,
        "outputTokens": 6,
        "type": "usage",
      },
    ],
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > refusal 1`] = `
{
  "codex": {
    "chunks": [
      {
        "text": "[Refusal] I cannot help with that.",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_refusal",
  },
  "codexSse": {
    "chunks": [
      {
        "text": "[Refusal] I cannot help with that.",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_refusal",
  },
  "native": {
    "chunks": [
      {
        "text": "[Refusal] I cannot help with that.",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_refusal",
  },
  "nativeSse": {
    "chunks": [
      {
        "text": "[Refusal] I cannot help with that.",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_refusal",
  },
  "xai": {
    "chunks": [
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "type": "usage",
      },
    ],
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > response.failed 1`] = `
{
  "codex": {
    "chunks": [],
    "encryptedContent": undefined,
    "responseId": "resp_failed",
  },
  "codexSse": {
    "chunks": [],
    "encryptedContent": undefined,
    "responseId": "resp_failed",
  },
  "native": {
    "chunks": [],
    "encryptedContent": undefined,
    "responseId": "resp_failed",
  },
  "nativeSse": {
    "chunks": [],
    "encryptedContent": undefined,
    "responseId": "resp_failed",
  },
  "xai": {
    "chunks": [],
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > streamed function call (item_id on the deltas, identity on the item) 1`] = `
{
  "codex": {
    "chunks": [
      {
        "arguments": "{"path":",
        "id": "call_1",
        "index": 0,
        "name": "read_file",
        "type": "tool_call_partial",
      },
      {
        "arguments": ""a.ts"}",
        "id": "call_1",
        "index": 0,
        "name": "read_file",
        "type": "tool_call_partial",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_fc",
  },
  "codexSse": {
    "chunks": [
      {
        "arguments": "{"path":",
        "id": "call_1",
        "index": 0,
        "name": "read_file",
        "type": "tool_call_partial",
      },
      {
        "arguments": ""a.ts"}",
        "id": "call_1",
        "index": 0,
        "name": "read_file",
        "type": "tool_call_partial",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_fc",
  },
  "native": {
    "chunks": [
      {
        "arguments": "{"path":",
        "id": "call_1",
        "index": 0,
        "name": "read_file",
        "type": "tool_call_partial",
      },
      {
        "arguments": ""a.ts"}",
        "id": "call_1",
        "index": 0,
        "name": "read_file",
        "type": "tool_call_partial",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_fc",
  },
  "nativeSse": {
    "chunks": [
      {
        "arguments": "{"path":",
        "id": "call_1",
        "index": 0,
        "name": "read_file",
        "type": "tool_call_partial",
      },
      {
        "arguments": ""a.ts"}",
        "id": "call_1",
        "index": 0,
        "name": "read_file",
        "type": "tool_call_partial",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_fc",
  },
  "xai": {
    "chunks": [
      {
        "arguments": "{"path":"a.ts"}",
        "id": "call_1",
        "name": "read_file",
        "type": "tool_call",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "type": "usage",
      },
    ],
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > text and reasoning items in response.output_item.added 1`] = `
{
  "codex": {
    "chunks": [
      {
        "text": "item reasoning",
        "type": "reasoning",
      },
      {
        "text": "item text",
        "type": "text",
      },
      {
        "text": "message text",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_added_items",
  },
  "codexSse": {
    "chunks": [
      {
        "text": "item reasoning",
        "type": "reasoning",
      },
      {
        "text": "item text",
        "type": "text",
      },
      {
        "text": "message text",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_added_items",
  },
  "native": {
    "chunks": [
      {
        "text": "item reasoning",
        "type": "reasoning",
      },
      {
        "text": "item text",
        "type": "text",
      },
      {
        "text": "message text",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_added_items",
  },
  "nativeSse": {
    "chunks": [
      {
        "text": "item reasoning",
        "type": "reasoning",
      },
      {
        "text": "item text",
        "type": "text",
      },
      {
        "text": "message text",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "totalCost": 0.000032500000000000004,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_added_items",
  },
  "xai": {
    "chunks": [
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 1,
        "outputTokens": 2,
        "type": "usage",
      },
    ],
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > usage in a separate event and a Chat Completions chunk 1`] = `
{
  "codex": {
    "chunks": [
      {
        "text": "chat chunk",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 3,
        "outputTokens": 4,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": undefined,
  },
  "codexSse": {
    "chunks": [
      {
        "text": "chat chunk",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 3,
        "outputTokens": 4,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": undefined,
  },
  "native": {
    "chunks": [
      {
        "text": "chat chunk",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 3,
        "outputTokens": 4,
        "totalCost": 0.0000675,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": undefined,
  },
  "nativeSse": {
    "chunks": [
      {
        "text": "chat chunk",
        "type": "text",
      },
      {
        "cacheReadTokens": 0,
        "cacheWriteTokens": 0,
        "inputTokens": 3,
        "outputTokens": 4,
        "totalCost": 0.0000675,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": undefined,
  },
  "xai": {
    "chunks": [],
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > usage with Chat Completions and Anthropic style names 1`] = `
{
  "codex": {
    "chunks": [
      {
        "cacheReadTokens": 13,
        "cacheWriteTokens": 11,
        "inputTokens": 50,
        "outputTokens": 7,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_alt_usage",
  },
  "codexSse": {
    "chunks": [
      {
        "cacheReadTokens": 13,
        "cacheWriteTokens": 11,
        "inputTokens": 50,
        "outputTokens": 7,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_alt_usage",
  },
  "native": {
    "chunks": [
      {
        "cacheReadTokens": 13,
        "cacheWriteTokens": 11,
        "inputTokens": 50,
        "outputTokens": 7,
        "totalCost": 0.00020075000000000003,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_alt_usage",
  },
  "nativeSse": {
    "chunks": [
      {
        "cacheReadTokens": 13,
        "cacheWriteTokens": 11,
        "inputTokens": 50,
        "outputTokens": 7,
        "totalCost": 0.00020075000000000003,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_alt_usage",
  },
  "xai": {
    "chunks": [
      {
        "cacheReadTokens": 13,
        "cacheWriteTokens": 11,
        "inputTokens": 50,
        "outputTokens": 7,
        "type": "usage",
      },
    ],
  },
}
`;

exports[`Responses API handlers: replayed event fixtures > usage with only token details 1`] = `
{
  "codex": {
    "chunks": [
      {
        "cacheReadTokens": 30,
        "cacheWriteTokens": 5,
        "inputTokens": 105,
        "outputTokens": 9,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_details_only",
  },
  "codexSse": {
    "chunks": [
      {
        "cacheReadTokens": 30,
        "cacheWriteTokens": 5,
        "inputTokens": 105,
        "outputTokens": 9,
        "totalCost": 0,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_details_only",
  },
  "native": {
    "chunks": [
      {
        "cacheReadTokens": 30,
        "cacheWriteTokens": 5,
        "inputTokens": 105,
        "outputTokens": 9,
        "totalCost": 0.00033,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_details_only",
  },
  "nativeSse": {
    "chunks": [
      {
        "cacheReadTokens": 30,
        "cacheWriteTokens": 5,
        "inputTokens": 105,
        "outputTokens": 9,
        "totalCost": 0.00033,
        "type": "usage",
      },
    ],
    "encryptedContent": undefined,
    "responseId": "resp_details_only",
  },
  "xai": {
    "chunks": [
      {
        "cacheReadTokens": 30,
        "cacheWriteTokens": 0,
        "inputTokens": 0,
        "outputTokens": 9,
        "type": "usage",
      },
    ],
  },
}
`;

exports[`Responses API handlers: request bodies > codex: gpt-5.4 with default settings 1`] = `
{
  "input": [
    {
      "content": [
        {
          "text": "Read a.ts",
          "type": "input_text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "Reading the file.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
    },
    {
      "arguments": "{"path":"a.ts"}",
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx_5e8d19ce",
      "name": "read_file",
      "type": "function_call",
    },
    {
      "content": [
        {
          "text": "Now explain it",
          "type": "input_text",
        },
        {
          "image_url": "data:image/png;base64,iVBORw0KGgo=",
          "type": "input_image",
        },
      ],
      "role": "user",
    },
    {
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx_5e8d19ce",
      "output": "file body",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_2",
      "output": "part onepart two",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_3",
      "output": "",
      "type": "function_call_output",
    },
    {
      "encrypted_content": "enc_prev",
      "id": "rs_prev",
      "summary": [],
      "type": "reasoning",
    },
    {
      "content": [
        {
          "text": "It exports one function.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
    },
  ],
  "instructions": "You are a coder.",
  "model": "gpt-5.4",
  "parallel_tool_calls": true,
  "store": false,
  "stream": true,
  "tool_choice": undefined,
  "tools": [
    {
      "description": "Run a command",
      "name": "execute_command",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "command": {
            "type": "string",
          },
          "cwd": {
            "type": [
              "string",
              "null",
            ],
          },
          "env": {
            "additionalProperties": false,
            "properties": {
              "name": {
                "type": "string",
              },
            },
            "required": [
              "name",
            ],
            "type": "object",
          },
        },
        "required": [
          "command",
          "cwd",
          "env",
        ],
        "type": "object",
      },
      "strict": true,
      "type": "function",
    },
    {
      "description": "Search GitHub",
      "name": "mcp--github--search",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "limit": {
            "type": "number",
          },
          "query": {
            "type": "string",
          },
        },
        "required": [
          "query",
        ],
        "type": "object",
      },
      "strict": false,
      "type": "function",
    },
  ],
}
`;

exports[`Responses API handlers: request bodies > codex: gpt-5.4 with effort high and summary off 1`] = `
{
  "include": [
    "reasoning.encrypted_content",
  ],
  "input": [
    {
      "content": [
        {
          "text": "Read a.ts",
          "type": "input_text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "Reading the file.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
    },
    {
      "arguments": "{"path":"a.ts"}",
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx_5e8d19ce",
      "name": "read_file",
      "type": "function_call",
    },
    {
      "content": [
        {
          "text": "Now explain it",
          "type": "input_text",
        },
        {
          "image_url": "data:image/png;base64,iVBORw0KGgo=",
          "type": "input_image",
        },
      ],
      "role": "user",
    },
    {
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx_5e8d19ce",
      "output": "file body",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_2",
      "output": "part onepart two",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_3",
      "output": "",
      "type": "function_call_output",
    },
    {
      "encrypted_content": "enc_prev",
      "id": "rs_prev",
      "summary": [],
      "type": "reasoning",
    },
    {
      "content": [
        {
          "text": "It exports one function.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
    },
  ],
  "instructions": "You are a coder.",
  "model": "gpt-5.4",
  "parallel_tool_calls": true,
  "reasoning": {
    "effort": "high",
    "summary": "auto",
  },
  "store": false,
  "stream": true,
  "tool_choice": undefined,
  "tools": [
    {
      "description": "Run a command",
      "name": "execute_command",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "command": {
            "type": "string",
          },
          "cwd": {
            "type": [
              "string",
              "null",
            ],
          },
          "env": {
            "additionalProperties": false,
            "properties": {
              "name": {
                "type": "string",
              },
            },
            "required": [
              "name",
            ],
            "type": "object",
          },
        },
        "required": [
          "command",
          "cwd",
          "env",
        ],
        "type": "object",
      },
      "strict": true,
      "type": "function",
    },
    {
      "description": "Search GitHub",
      "name": "mcp--github--search",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "limit": {
            "type": "number",
          },
          "query": {
            "type": "string",
          },
        },
        "required": [
          "query",
        ],
        "type": "object",
      },
      "strict": false,
      "type": "function",
    },
  ],
}
`;

exports[`Responses API handlers: request bodies > codex: gpt-5.6-sol with effort none 1`] = `
{
  "input": [
    {
      "content": [
        {
          "text": "Read a.ts",
          "type": "input_text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "Reading the file.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
    },
    {
      "arguments": "{"path":"a.ts"}",
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx_5e8d19ce",
      "name": "read_file",
      "type": "function_call",
    },
    {
      "content": [
        {
          "text": "Now explain it",
          "type": "input_text",
        },
        {
          "image_url": "data:image/png;base64,iVBORw0KGgo=",
          "type": "input_image",
        },
      ],
      "role": "user",
    },
    {
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx_5e8d19ce",
      "output": "file body",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_2",
      "output": "part onepart two",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_3",
      "output": "",
      "type": "function_call_output",
    },
    {
      "encrypted_content": "enc_prev",
      "id": "rs_prev",
      "summary": [],
      "type": "reasoning",
    },
    {
      "content": [
        {
          "text": "It exports one function.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
    },
  ],
  "instructions": "You are a coder.",
  "model": "gpt-5.6-sol",
  "parallel_tool_calls": true,
  "store": false,
  "stream": true,
  "tool_choice": undefined,
  "tools": [
    {
      "description": "Run a command",
      "name": "execute_command",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "command": {
            "type": "string",
          },
          "cwd": {
            "type": [
              "string",
              "null",
            ],
          },
          "env": {
            "additionalProperties": false,
            "properties": {
              "name": {
                "type": "string",
              },
            },
            "required": [
              "name",
            ],
            "type": "object",
          },
        },
        "required": [
          "command",
          "cwd",
          "env",
        ],
        "type": "object",
      },
      "strict": true,
      "type": "function",
    },
    {
      "description": "Search GitHub",
      "name": "mcp--github--search",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "limit": {
            "type": "number",
          },
          "query": {
            "type": "string",
          },
        },
        "required": [
          "query",
        ],
        "type": "object",
      },
      "strict": false,
      "type": "function",
    },
  ],
}
`;

exports[`Responses API handlers: request bodies > native: gpt-4.1 (no reasoning, temperature) 1`] = `
{
  "input": [
    {
      "content": [
        {
          "text": "Read a.ts",
          "type": "input_text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "Reading the file.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
    },
    {
      "arguments": "{"path":"a.ts"}",
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx_5e8d19ce",
      "name": "read_file",
      "type": "function_call",
    },
    {
      "content": [
        {
          "text": "Now explain it",
          "type": "input_text",
        },
        {
          "image_url": "data:image/png;base64,iVBORw0KGgo=",
          "type": "input_image",
        },
      ],
      "role": "user",
    },
    {
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx_5e8d19ce",
      "output": "file body",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_2",
      "output": "part onepart two",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_3",
      "output": "",
      "type": "function_call_output",
    },
    {
      "encrypted_content": "enc_prev",
      "id": "rs_prev",
      "summary": [],
      "type": "reasoning",
    },
    {
      "content": [
        {
          "text": "It exports one function.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
    },
  ],
  "instructions": "You are a coder.",
  "max_output_tokens": 32768,
  "model": "gpt-4.1",
  "parallel_tool_calls": true,
  "service_tier": "priority",
  "store": false,
  "stream": true,
  "temperature": 0,
  "tool_choice": undefined,
  "tools": [
    {
      "description": "Run a command",
      "name": "execute_command",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "command": {
            "type": "string",
          },
          "cwd": {
            "type": [
              "string",
              "null",
            ],
          },
          "env": {
            "additionalProperties": false,
            "properties": {
              "name": {
                "type": "string",
              },
            },
            "required": [
              "name",
            ],
            "type": "object",
          },
        },
        "required": [
          "command",
          "cwd",
          "env",
        ],
        "type": "object",
      },
      "strict": true,
      "type": "function",
    },
    {
      "description": "Search GitHub",
      "name": "mcp--github--search",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "limit": {
            "type": "number",
          },
          "query": {
            "type": "string",
          },
        },
        "required": [
          "query",
        ],
        "type": "object",
      },
      "strict": false,
      "type": "function",
    },
  ],
}
`;

exports[`Responses API handlers: request bodies > native: gpt-5.1 (24h prompt cache retention) 1`] = `
{
  "include": [
    "reasoning.encrypted_content",
  ],
  "input": [
    {
      "content": [
        {
          "text": "Read a.ts",
          "type": "input_text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "Reading the file.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
    },
    {
      "arguments": "{"path":"a.ts"}",
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx_5e8d19ce",
      "name": "read_file",
      "type": "function_call",
    },
    {
      "content": [
        {
          "text": "Now explain it",
          "type": "input_text",
        },
        {
          "image_url": "data:image/png;base64,iVBORw0KGgo=",
          "type": "input_image",
        },
      ],
      "role": "user",
    },
    {
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx_5e8d19ce",
      "output": "file body",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_2",
      "output": "part onepart two",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_3",
      "output": "",
      "type": "function_call_output",
    },
    {
      "encrypted_content": "enc_prev",
      "id": "rs_prev",
      "summary": [],
      "type": "reasoning",
    },
    {
      "content": [
        {
          "text": "It exports one function.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
    },
  ],
  "instructions": "You are a coder.",
  "max_output_tokens": 128000,
  "model": "gpt-5.1",
  "parallel_tool_calls": true,
  "prompt_cache_retention": "24h",
  "reasoning": {
    "effort": "medium",
    "summary": "auto",
  },
  "store": false,
  "stream": true,
  "text": {
    "verbosity": "medium",
  },
  "tool_choice": undefined,
  "tools": [
    {
      "description": "Run a command",
      "name": "execute_command",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "command": {
            "type": "string",
          },
          "cwd": {
            "type": [
              "string",
              "null",
            ],
          },
          "env": {
            "additionalProperties": false,
            "properties": {
              "name": {
                "type": "string",
              },
            },
            "required": [
              "name",
            ],
            "type": "object",
          },
        },
        "required": [
          "command",
          "cwd",
          "env",
        ],
        "type": "object",
      },
      "strict": true,
      "type": "function",
    },
    {
      "description": "Search GitHub",
      "name": "mcp--github--search",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "limit": {
            "type": "number",
          },
          "query": {
            "type": "string",
          },
        },
        "required": [
          "query",
        ],
        "type": "object",
      },
      "strict": false,
      "type": "function",
    },
  ],
}
`;

exports[`Responses API handlers: request bodies > native: gpt-5.4 with default settings 1`] = `
{
  "include": [
    "reasoning.encrypted_content",
  ],
  "input": [
    {
      "content": [
        {
          "text": "Read a.ts",
          "type": "input_text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "Reading the file.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
    },
    {
      "arguments": "{"path":"a.ts"}",
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx_5e8d19ce",
      "name": "read_file",
      "type": "function_call",
    },
    {
      "content": [
        {
          "text": "Now explain it",
          "type": "input_text",
        },
        {
          "image_url": "data:image/png;base64,iVBORw0KGgo=",
          "type": "input_image",
        },
      ],
      "role": "user",
    },
    {
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx_5e8d19ce",
      "output": "file body",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_2",
      "output": "part onepart two",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_3",
      "output": "",
      "type": "function_call_output",
    },
    {
      "encrypted_content": "enc_prev",
      "id": "rs_prev",
      "summary": [],
      "type": "reasoning",
    },
    {
      "content": [
        {
          "text": "It exports one function.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
    },
  ],
  "instructions": "You are a coder.",
  "max_output_tokens": 128000,
  "model": "gpt-5.4",
  "parallel_tool_calls": true,
  "reasoning": {
    "effort": "none",
    "summary": "auto",
  },
  "store": false,
  "stream": true,
  "text": {
    "verbosity": "medium",
  },
  "tool_choice": undefined,
  "tools": [
    {
      "description": "Run a command",
      "name": "execute_command",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "command": {
            "type": "string",
          },
          "cwd": {
            "type": [
              "string",
              "null",
            ],
          },
          "env": {
            "additionalProperties": false,
            "properties": {
              "name": {
                "type": "string",
              },
            },
            "required": [
              "name",
            ],
            "type": "object",
          },
        },
        "required": [
          "command",
          "cwd",
          "env",
        ],
        "type": "object",
      },
      "strict": true,
      "type": "function",
    },
    {
      "description": "Search GitHub",
      "name": "mcp--github--search",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "limit": {
            "type": "number",
          },
          "query": {
            "type": "string",
          },
        },
        "required": [
          "query",
        ],
        "type": "object",
      },
      "strict": false,
      "type": "function",
    },
  ],
}
`;

exports[`Responses API handlers: request bodies > native: gpt-5.4 with effort, summary off, verbosity, flex tier and temperature 1`] = `
{
  "include": [
    "reasoning.encrypted_content",
  ],
  "input": [
    {
      "content": [
        {
          "text": "Read a.ts",
          "type": "input_text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "Reading the file.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
    },
    {
      "arguments": "{"path":"a.ts"}",
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx_5e8d19ce",
      "name": "read_file",
      "type": "function_call",
    },
    {
      "content": [
        {
          "text": "Now explain it",
          "type": "input_text",
        },
        {
          "image_url": "data:image/png;base64,iVBORw0KGgo=",
          "type": "input_image",
        },
      ],
      "role": "user",
    },
    {
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx_5e8d19ce",
      "output": "file body",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_2",
      "output": "part onepart two",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_3",
      "output": "",
      "type": "function_call_output",
    },
    {
      "encrypted_content": "enc_prev",
      "id": "rs_prev",
      "summary": [],
      "type": "reasoning",
    },
    {
      "content": [
        {
          "text": "It exports one function.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
    },
  ],
  "instructions": "You are a coder.",
  "max_output_tokens": 128000,
  "model": "gpt-5.4",
  "parallel_tool_calls": true,
  "reasoning": {
    "effort": "high",
  },
  "service_tier": "flex",
  "store": false,
  "stream": true,
  "text": {
    "verbosity": "low",
  },
  "tool_choice": undefined,
  "tools": [
    {
      "description": "Run a command",
      "name": "execute_command",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "command": {
            "type": "string",
          },
          "cwd": {
            "type": [
              "string",
              "null",
            ],
          },
          "env": {
            "additionalProperties": false,
            "properties": {
              "name": {
                "type": "string",
              },
            },
            "required": [
              "name",
            ],
            "type": "object",
          },
        },
        "required": [
          "command",
          "cwd",
          "env",
        ],
        "type": "object",
      },
      "strict": true,
      "type": "function",
    },
    {
      "description": "Search GitHub",
      "name": "mcp--github--search",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "limit": {
            "type": "number",
          },
          "query": {
            "type": "string",
          },
        },
        "required": [
          "query",
        ],
        "type": "object",
      },
      "strict": false,
      "type": "function",
    },
  ],
}
`;

exports[`Responses API handlers: request bodies > native: gpt-5.4 with reasoning disabled 1`] = `
{
  "input": [
    {
      "content": [
        {
          "text": "Read a.ts",
          "type": "input_text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "Reading the file.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
    },
    {
      "arguments": "{"path":"a.ts"}",
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx_5e8d19ce",
      "name": "read_file",
      "type": "function_call",
    },
    {
      "content": [
        {
          "text": "Now explain it",
          "type": "input_text",
        },
        {
          "image_url": "data:image/png;base64,iVBORw0KGgo=",
          "type": "input_image",
        },
      ],
      "role": "user",
    },
    {
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx_5e8d19ce",
      "output": "file body",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_2",
      "output": "part onepart two",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_3",
      "output": "",
      "type": "function_call_output",
    },
    {
      "encrypted_content": "enc_prev",
      "id": "rs_prev",
      "summary": [],
      "type": "reasoning",
    },
    {
      "content": [
        {
          "text": "It exports one function.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
    },
  ],
  "instructions": "You are a coder.",
  "max_output_tokens": 128000,
  "model": "gpt-5.4",
  "parallel_tool_calls": true,
  "store": false,
  "stream": true,
  "text": {
    "verbosity": "medium",
  },
  "tool_choice": undefined,
  "tools": [
    {
      "description": "Run a command",
      "name": "execute_command",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "command": {
            "type": "string",
          },
          "cwd": {
            "type": [
              "string",
              "null",
            ],
          },
          "env": {
            "additionalProperties": false,
            "properties": {
              "name": {
                "type": "string",
              },
            },
            "required": [
              "name",
            ],
            "type": "object",
          },
        },
        "required": [
          "command",
          "cwd",
          "env",
        ],
        "type": "object",
      },
      "strict": true,
      "type": "function",
    },
    {
      "description": "Search GitHub",
      "name": "mcp--github--search",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "limit": {
            "type": "number",
          },
          "query": {
            "type": "string",
          },
        },
        "required": [
          "query",
        ],
        "type": "object",
      },
      "strict": false,
      "type": "function",
    },
  ],
}
`;

exports[`Responses API handlers: request bodies > native: no tools, forced tool choice and parallel calls off 1`] = `
{
  "include": [
    "reasoning.encrypted_content",
  ],
  "input": [
    {
      "content": [
        {
          "text": "Read a.ts",
          "type": "input_text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "Reading the file.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
    },
    {
      "arguments": "{"path":"a.ts"}",
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx_5e8d19ce",
      "name": "read_file",
      "type": "function_call",
    },
    {
      "content": [
        {
          "text": "Now explain it",
          "type": "input_text",
        },
        {
          "image_url": "data:image/png;base64,iVBORw0KGgo=",
          "type": "input_image",
        },
      ],
      "role": "user",
    },
    {
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx_5e8d19ce",
      "output": "file body",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_2",
      "output": "part onepart two",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_3",
      "output": "",
      "type": "function_call_output",
    },
    {
      "encrypted_content": "enc_prev",
      "id": "rs_prev",
      "summary": [],
      "type": "reasoning",
    },
    {
      "content": [
        {
          "text": "It exports one function.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
    },
  ],
  "instructions": "You are a coder.",
  "max_output_tokens": 128000,
  "model": "gpt-5.4",
  "parallel_tool_calls": false,
  "reasoning": {
    "effort": "none",
    "summary": "auto",
  },
  "store": false,
  "stream": true,
  "text": {
    "verbosity": "medium",
  },
  "tool_choice": "required",
  "tools": [],
}
`;

exports[`Responses API handlers: request bodies > xai: grok-3-mini (reasoning effort) 1`] = `
{
  "include": [
    "reasoning.encrypted_content",
  ],
  "input": [
    {
      "content": [
        {
          "text": "Read a.ts",
          "type": "input_text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "[Thinking] Need to read it",
          "type": "output_text",
        },
      ],
      "role": "assistant",
      "type": "message",
    },
    {
      "content": [
        {
          "text": "Reading the file.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
      "type": "message",
    },
    {
      "arguments": "{"path":"a.ts"}",
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.bad:chars",
      "name": "read_file",
      "type": "function_call",
    },
    {
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.bad:chars",
      "output": "file body",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_2",
      "output": "part one
part two",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_3",
      "output": "(empty)",
      "type": "function_call_output",
    },
    {
      "content": [
        {
          "text": "Now explain it",
          "type": "input_text",
        },
        {
          "detail": "auto",
          "image_url": "data:image/png;base64,iVBORw0KGgo=",
          "type": "input_image",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "It exports one function.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
      "type": "message",
    },
  ],
  "instructions": "You are a coder.",
  "max_output_tokens": 8192,
  "model": "grok-3-mini",
  "parallel_tool_calls": true,
  "reasoning": {
    "reasoning_effort": "low",
  },
  "store": false,
  "stream": true,
  "temperature": 0,
  "tool_choice": "auto",
  "tools": [
    {
      "description": "Run a command",
      "name": "execute_command",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "command": {
            "type": "string",
          },
          "cwd": {
            "type": "string",
          },
          "env": {
            "additionalProperties": false,
            "properties": {
              "name": {
                "type": "string",
              },
            },
            "required": [
              "name",
            ],
            "type": "object",
          },
        },
        "required": [
          "command",
          "cwd",
          "env",
        ],
        "type": "object",
      },
      "strict": true,
      "type": "function",
    },
    {
      "description": "Search GitHub",
      "name": "mcp--github--search",
      "parameters": {
        "properties": {
          "limit": {
            "type": "number",
          },
          "query": {
            "type": "string",
          },
        },
        "required": [
          "query",
        ],
        "type": "object",
      },
      "strict": false,
      "type": "function",
    },
  ],
}
`;

exports[`Responses API handlers: request bodies > xai: grok-4.6 with default settings 1`] = `
{
  "include": [
    "reasoning.encrypted_content",
  ],
  "input": [
    {
      "content": [
        {
          "text": "Read a.ts",
          "type": "input_text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "[Thinking] Need to read it",
          "type": "output_text",
        },
      ],
      "role": "assistant",
      "type": "message",
    },
    {
      "content": [
        {
          "text": "Reading the file.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
      "type": "message",
    },
    {
      "arguments": "{"path":"a.ts"}",
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.bad:chars",
      "name": "read_file",
      "type": "function_call",
    },
    {
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.bad:chars",
      "output": "file body",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_2",
      "output": "part one
part two",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_3",
      "output": "(empty)",
      "type": "function_call_output",
    },
    {
      "content": [
        {
          "text": "Now explain it",
          "type": "input_text",
        },
        {
          "detail": "auto",
          "image_url": "data:image/png;base64,iVBORw0KGgo=",
          "type": "input_image",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "It exports one function.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
      "type": "message",
    },
  ],
  "instructions": "You are a coder.",
  "max_output_tokens": 65536,
  "model": "grok-4.6",
  "parallel_tool_calls": true,
  "store": false,
  "stream": true,
  "temperature": 0,
  "tool_choice": "auto",
  "tools": [
    {
      "description": "Run a command",
      "name": "execute_command",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "command": {
            "type": "string",
          },
          "cwd": {
            "type": "string",
          },
          "env": {
            "additionalProperties": false,
            "properties": {
              "name": {
                "type": "string",
              },
            },
            "required": [
              "name",
            ],
            "type": "object",
          },
        },
        "required": [
          "command",
          "cwd",
          "env",
        ],
        "type": "object",
      },
      "strict": true,
      "type": "function",
    },
    {
      "description": "Search GitHub",
      "name": "mcp--github--search",
      "parameters": {
        "properties": {
          "limit": {
            "type": "number",
          },
          "query": {
            "type": "string",
          },
        },
        "required": [
          "query",
        ],
        "type": "object",
      },
      "strict": false,
      "type": "function",
    },
  ],
}
`;

exports[`Responses API handlers: request bodies > xai: grok-4-0709 with temperature 1`] = `
{
  "include": [
    "reasoning.encrypted_content",
  ],
  "input": [
    {
      "content": [
        {
          "text": "Read a.ts",
          "type": "input_text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "[Thinking] Need to read it",
          "type": "output_text",
        },
      ],
      "role": "assistant",
      "type": "message",
    },
    {
      "content": [
        {
          "text": "Reading the file.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
      "type": "message",
    },
    {
      "arguments": "{"path":"a.ts"}",
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.bad:chars",
      "name": "read_file",
      "type": "function_call",
    },
    {
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.bad:chars",
      "output": "file body",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_2",
      "output": "part one
part two",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_3",
      "output": "(empty)",
      "type": "function_call_output",
    },
    {
      "content": [
        {
          "text": "Now explain it",
          "type": "input_text",
        },
        {
          "detail": "auto",
          "image_url": "data:image/png;base64,iVBORw0KGgo=",
          "type": "input_image",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "It exports one function.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
      "type": "message",
    },
  ],
  "instructions": "You are a coder.",
  "max_output_tokens": 8192,
  "model": "grok-4-0709",
  "parallel_tool_calls": true,
  "store": false,
  "stream": true,
  "temperature": 0.5,
  "tool_choice": "auto",
  "tools": [
    {
      "description": "Run a command",
      "name": "execute_command",
      "parameters": {
        "additionalProperties": false,
        "properties": {
          "command": {
            "type": "string",
          },
          "cwd": {
            "type": "string",
          },
          "env": {
            "additionalProperties": false,
            "properties": {
              "name": {
                "type": "string",
              },
            },
            "required": [
              "name",
            ],
            "type": "object",
          },
        },
        "required": [
          "command",
          "cwd",
          "env",
        ],
        "type": "object",
      },
      "strict": true,
      "type": "function",
    },
    {
      "description": "Search GitHub",
      "name": "mcp--github--search",
      "parameters": {
        "properties": {
          "limit": {
            "type": "number",
          },
          "query": {
            "type": "string",
          },
        },
        "required": [
          "query",
        ],
        "type": "object",
      },
      "strict": false,
      "type": "function",
    },
  ],
}
`;

exports[`Responses API handlers: request bodies > xai: no tools 1`] = `
{
  "include": [
    "reasoning.encrypted_content",
  ],
  "input": [
    {
      "content": [
        {
          "text": "Read a.ts",
          "type": "input_text",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "[Thinking] Need to read it",
          "type": "output_text",
        },
      ],
      "role": "assistant",
      "type": "message",
    },
    {
      "content": [
        {
          "text": "Reading the file.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
      "type": "message",
    },
    {
      "arguments": "{"path":"a.ts"}",
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.bad:chars",
      "name": "read_file",
      "type": "function_call",
    },
    {
      "call_id": "toolu_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.bad:chars",
      "output": "file body",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_2",
      "output": "part one
part two",
      "type": "function_call_output",
    },
    {
      "call_id": "toolu_3",
      "output": "(empty)",
      "type": "function_call_output",
    },
    {
      "content": [
        {
          "text": "Now explain it",
          "type": "input_text",
        },
        {
          "detail": "auto",
          "image_url": "data:image/png;base64,iVBORw0KGgo=",
          "type": "input_image",
        },
      ],
      "role": "user",
    },
    {
      "content": [
        {
          "text": "It exports one function.",
          "type": "output_text",
        },
      ],
      "role": "assistant",
      "type": "message",
    },
  ],
  "instructions": "You are a coder.",
  "max_output_tokens": 65536,
  "model": "grok-4.6",
  "store": false,
  "stream": true,
  "temperature": 0,
}
`;
